# gopro-transfer

./: .env.example  README.md  pyproject.toml
examples/: extract_telemetry.py  transfer_from_env.py
src/gopro_transfer/: __init__.py  config.py  logger.py  main.py  media_info.py  telemetry.py
src/gopro_transfer/transfer/: operations.py
